<resources>
    <string name="app_name">超市收银系统</string>
    <string name="cashier">收银</string>
    <string name="getMoney">收款</string>
    <string name="enter">录入</string>
    <string name="list">列表</string>
    <string name="mine">我的</string>
    <string name="barcode">条形码:</string>
    <string name="add">添加</string>
    <string name="scan">扫描</string>
    <string name="settle">去结算</string>
    <string name="searchCodebarOnline">在线条码查询:</string>
    <string name="goodsBar">商品条码:</string>
    <string name="goodsName">商品名称:</string>
    <string name="goodsPrice">商品价格:</string>
    <string name="goodsNum">商品库存:</string>
    <string name="num_1">1</string>
    <string name="goodPrice">¥%1$s</string>
    <string name="login">登录</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="logout">退出登录</string>
    <string name="edit">编辑商品</string>
    <string name="clean">清除</string>
    <string name="tips">提示</string>
    <string name="addGoods">手动输入条码添加商品</string>
    <string name="wechatPay">微信支付</string>
    <string name="aliPay">支付宝</string>
</resources>
