<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorWhiteBack"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:gravity="center"
        android:padding="14dp"
        android:textSize="18sp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:text="@string/mine"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="4dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="8dp"
            android:text="@string/searchCodebarOnline"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Switch
            android:id="@+id/sw"
            android:textOn=""
            android:textOff=""
            android:thumb="@drawable/thumb"
            android:track="@drawable/track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <Button
        android:id="@+id/bt_scan"
        android:text="@string/scan"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="4dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="8dp"
            android:text="@string/goodsBar"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_bar_code"
            android:background="@null"
            android:layout_weight="1"
            android:padding="8dp"
            android:inputType="number"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="LabelFor" />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="4dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="8dp"
            android:text="@string/goodsName"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_goods_name"
            android:background="@null"
            android:layout_weight="1"
            android:padding="8dp"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="LabelFor,TextFields" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="4dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="8dp"
            android:text="@string/goodsPrice"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_goods_price"
            android:background="@null"
            android:layout_weight="1"
            android:padding="8dp"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="4dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="8dp"
            android:text="@string/goodsNum"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_goods_num"
            android:background="@null"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/num_1"
            android:inputType="number"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <Button
        android:layout_margin="10dp"
        android:id="@+id/bt_add_goods"
        android:text="@string/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>