<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorWhiteBack"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:gravity="center"
        android:padding="14dp"
        android:textSize="18sp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorBlack"
        android:text="@string/mine"
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_entering"
        android:text="@string/enter"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:drawableStart="@mipmap/entering"
        android:drawableEnd="@mipmap/in"
        android:padding="16dp"
        android:layout_marginBottom="1dp"
        android:drawablePadding="14dp"
        android:gravity="center_vertical"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_logout"
        android:text="@string/logout"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"
        android:drawableStart="@mipmap/home"
        android:drawableEnd="@mipmap/in"
        android:padding="16dp"
        android:layout_marginBottom="1dp"
        android:drawablePadding="14dp"
        android:gravity="center_vertical"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>