<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorCutOffLine2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_input_barcode"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/barcode"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_input_barcode"
            android:gravity="center_vertical"
            android:background="@null"
            android:layout_weight="1"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="LabelFor" />
        <Button
            android:id="@+id/bt_input_barcode"
            android:text="@string/add"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_scan"
        android:layout_below="@id/ll_input_barcode"
        android:text="@string/scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/rl_total"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:background="@color/colorWhite"
        android:foreground="@drawable/frame_no_corner"
        android:layout_height="60dp">
        <CheckBox
            android:id="@+id/cb_total"
            android:text=""
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:button="@null"
            android:drawableStart="@drawable/checkbox_selecter"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/bt_settle_accounts"
            android:text="@string/settle"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:background="@color/colorTuomanRed"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_toStartOf="@id/bt_settle_accounts"
            android:lines="1"
            android:text=""
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorTuomanRed"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_total_1"
            android:layout_toStartOf="@id/tv_total"
            android:lines="1"
            android:text=""
            android:paddingStart="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:ignore="RtlSymmetry" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_cashier_list"
        android:layout_below="@id/bt_scan"
        android:layout_above="@id/rl_total"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</RelativeLayout>